--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -115,12 +115,12 @@ layout: default
         </footer-col-wrapper>
   </div>
   <div class='detail-about-me'>
-    <p class='detail-title'>About me!</p>
+    <p class='detail-title'>About me</p>
     <p class='detail-content'>My name is Ryan Kistner, I am a frontend Web Developer.
       As well as a Coding Dojo alumni. I have built multiple full stack applications in 
       Django, MEAN, and iOS. 
       I have fallen in love with writing iOS and MEAN apps. Odd mix, but I like what I like :)
-      I am a musician, who loves playing live shows and jamming with friends. As well as an avid gamer.
+      I am a musician, who loves playing live shows and jamming with friends, as well as an avid gamer.
       I am eager to continue to grow in my career of Web Development. I had worked in the Semi-Conductor industry for 6+ years before 
       making the decision to start coding. So far it has been a great decisons, and I am excited for it to continue.
       Please feel free to look at any of my projects listed above, or my github & linkedIn accounts listed below.
