--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -11,7 +11,7 @@ $spacing-unit:     30px !default;
 
 $text-color:       #3B3B3B !default;
 $background-color: #77A0AA !default;
-$brand-color:      #2a7ae2 !default;
+$brand-color:      #A1D8E5 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
