--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -17,23 +17,26 @@
 }
 
 .site-title {
-  font-family: 'Delius Unicase', cursive;
-  @include relative-font-size(2);
-  font-weight: 500;
+  font-family: 'Permanent Marker', cursive;
+  text-shadow: 1px -2px 1px #09061b;
+  @include relative-font-size(4);
+  font-weight: 200;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: 0px;
-  margin-bottom: -15px; 
-  padding-top:10px;
-  color: #3B3B3B;
+  margin-bottom: -22px; 
+  padding-top:15px;
+  color: #E5E5E5;
 }
 .site-title-sm {
-  font-family: 'Delius Unicase', cursive;
-  @include relative-font-size(1.43);
+  font-family: 'Permanent Marker', cursive;
+  text-shadow: 1px -2px 1px #09061b;
+  @include relative-font-size(2);
   font-weight: 400;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
   margin-bottom: 5vh;
-  color: #3B3B3B;
+  color: #E5E5E5;
+  text-decoration: underline;
 }
 
 
@@ -334,19 +337,19 @@
 }
 .img-icon{
   width: 2%;
-  height: 2%;
+  border-radius: 50%;
 }
 .img-icon-git{
   width: 8%;
-  height: 8%;
+  margin-right: -6px;
 }
 .img-icon-mail{
-  width:2.75%;
-  margin-left:-5px;
+  width:2.5%;
 }
 .foot-container{ 
-  align-content: center;
-  text-align: center; 
+  justify-content: center;
+  text-align: center;
+  display: block; 
 }
 
 .detail-title{
