--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,19 +5,19 @@ layout: default
 <div class="home">
 
       <div class='image-holder-1'>
-          <img class='img-project' src='/assets/wifi.png'>
+          <img class='img-project' src='{{ "/assets/wifi.png" | relative_url }}'>
       </div>
 
       <div class='image-holder-2'>
-        <img class='img-project' src='/assets/dance.png'>
+        <img class='img-project' src='{{ "/assets/dance.png" | relative_url }}'>
       </div>
 
       <div class='image-holder-3'>
-        <img class='img-project' src='/assets/megaphone.png'>
+        <img class='img-project' src='{{ "/assets/megaphone.png" | relative_url }}'>
       </div>
 
       <div class='image-holder-4'>
-          <img class='img-project' src='/assets/pacman.png'>
+          <img class='img-project' src='{{ "/assets/pacman.png" | relative_url }}'>
       </div>
 
 </div>
