--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,10 @@
 <footer class="site-footer h-card">
   <div class='foot-container'>
-    <a class='icons' href='https://www.linkedin.com/in/ryangkistner' target='.blank'><img class='img-icon' src='/assets/linkedin.png'></a>
-    <a class='icons' href='https://www.github.com/RyanGKist' target='.blank'><img class='img-icon-git' src='/assets/mark-github.png'></a>
-    <a class='icons' href="mailto:RyanGKistner@gmail.com?Subject=Hello!" target="_top"><img class='img-icon-mail' src='/assets/mail.svg'></a>
+    <a class='icons' href='https://www.linkedin.com/in/ryangkistner' target='.blank'><img class='img-icon' src='{{ "/assets/linkedin.png" | relative_url }}'></a>
+    <a class='icons' href='https://www.github.com/RyanGKist' target='.blank'><img class='img-icon-git' src='{{ "/assets/mark-github.png" | relative_url }}'></a>
+    <a class='icons' href="mailto:RyanGKistner@gmail.com?Subject=Hello!" target="_top"><img class='img-icon-mail' src='{{ "/assets/mail.svg" | relative_url }}'></a>
   </div>
 </footer>
+
+
+
