Updated deatiled titles font size

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -334,6 +334,7 @@
 
 .detail-title{
   border-bottom: 1px solid black;
+  @include relative-font-size(1.35);
 }
 .detail-content{
   text-align: justify
