Disabled scroll bars due to issue with windows browser

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -116,7 +116,7 @@ layout: default
   </div>
   <div class='detail-about-me'>
     <p class='detail-title'>About me</p>
-    <p class='detail-content'>My name is Ryan Kistner, I am a frontend Web Developer.
+    <p class='detail-content'>My name is Ryan Kistner I am a frontend Web Developer,
       As well as a Coding Dojo alumni. I have built multiple full stack applications in 
       Django, MEAN, and iOS. 
       I have fallen in love with writing iOS and MEAN apps. Odd mix, but I like what I like :)
