--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -23,6 +23,9 @@ body {
        -o-font-feature-settings: "kern" 1;
           font-feature-settings: "kern" 1;
   font-kerning: normal;
+  -webkit-scrollbar { 
+    display: none; 
+  }
 }
 
 
