--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -179,6 +179,9 @@ pre {
     max-width:         calc(#{$content-width} - (#{$spacing-unit}));
     padding-right: $spacing-unit / 2;
     padding-left: $spacing-unit / 2;
+    -webkit-scrollbar { 
+      display: none; 
+    }
   }
 }
 
