--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,9 +27,9 @@ layout: default
           <div class="footer-col">
             <div class="footer-col-1-left">
                 <p class='detail-title'>WiFi Finder</p>
-                <p class='detail-content'>This is a project created using Angular-4 on the frontend, and postgreSQL on the backend.
-                  WiFi Finder allows the user to locate WiFi hotspots around them, or in specific areas. Based on data pulled from backend data entered from user.
-                  The project utilizes Angular's observables, as well as data response following JSON API's formatting conventions.
+                <p class='detail-content'>This is a project created using Angular-4 on the frontend and postgreSQL on the backend.
+                  WiFi Finder allows the user to locate WiFi hotspots around them or in specific areas, based on data pulled from the backend database entered from user.
+                  The project utilizes Angular's observables, as well as data responses following JSON API's formatting conventions.
                   <br>
                   Link to github <a href='https://github.com/RyanGKist/WifiApp' target='.blank'>here</a>.
                 </p>
@@ -51,7 +51,7 @@ layout: default
             <div class="footer-col-1-left">
                 <p class='detail-title'>Are we Grooving?</p>
                 <p class='detail-content'>iOS app made utilizing Core Motion library. The app allows users to generate color schemes based on movement.
-                  Creating an interactive and responsive app. Prioritized tasks into main queue. To allow for real time display of movement.
+                  Creating an interactive and responsive app. Prioritized tasks into main queue, to allow for real time display of movement.
                   <br>
                   Link to github <a href='https://github.com/RyanGKist/AreweGrooving' target='.blank'>here</a>.
                   <br>
@@ -96,7 +96,7 @@ layout: default
             <div class="footer-col-1-left">
                 <p class='detail-title'>Pacman</p>
                 <p class='detail-content'>
-                  This is a simple pacman game created using only Javascript, CSS, and HTML. Collaborated with a member of my coding bootcamp.
+                  This is a simple Pacman game created using only Javascript, CSS and HTML. This was a collaboration with a member of my coding bootcamp.
                   Utilized HTML DOM manipulation through JavaScript functions & conditionals, to allow Pacman and Ghost to maneuver around the map within
                   the correct bounds of the map.
                   <br>
@@ -116,18 +116,16 @@ layout: default
   </div>
   <div class='detail-about-me'>
     <p class='detail-title'>About me</p>
-    <p class='detail-content'>My name is Ryan Kistner I am a frontend Web Developer,
-      As well as a Coding Dojo alumni. I have built multiple full stack applications in 
-      Django, MEAN, and iOS. 
-      I have fallen in love with writing iOS and MEAN apps. Odd mix, but I like what I like :)
-      I am a musician, who loves playing live shows and jamming with friends, as well as an avid gamer.
-      I am eager to continue to grow in my career of Web Development. I had worked in the Semi-Conductor industry for 6+ years before 
-      making the decision to start coding. So far it has been a great decisons, and I am excited for it to continue.
+    <p class='detail-content'>My name is Ryan Kistner and I am a Frontend Web Developer,
+      as well as a Coding Dojo alumni. I have built multiple full stack applications in 
+      Django, MEAN and iOS. 
+      I have fallen in love with writing code iOS and MEAN apps. It's odd mix, but I like what I like :)
+      I am a musician who loves playing live shows and jamming with friends, as well as an avid gamer.
+      I am eager to continue to grow in my career in Web Development. I have worked in the Semi-Conductor industry for 6+ years before 
+      making the decision to start coding. So far it has been a great decisons and I am excited for what my futures holds in Web Development.
       Please feel free to look at any of my projects listed above, or my github & linkedIn accounts listed below.
       Also, please feel free to contact me with any questions, opportunties, or concerns.
-      Look forward to talking with you!
-    
-      
+      I look forward to talking with you.   
     </p>
   </div>
 </div>  
