Changed Title Font

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -20,7 +20,7 @@
 }
 
 .site-title {
-  font-family: 'Permanent Marker', cursive;
+  font-family: 'Exo 2', sans-serif;
   text-shadow: 1px -2px 1px #09061b;
   @include relative-font-size(4);
   font-weight: 200;
@@ -31,7 +31,7 @@
   color: #E5E5E5;
 }
 .site-title-sm {
-  font-family: 'Permanent Marker', cursive;
+  font-family: 'Exo 2', sans-serif;
   text-shadow: 1px -2px 1px #09061b;
   @include relative-font-size(2);
   font-weight: 400;
