--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -15,31 +15,37 @@
 .site-header-center {
   border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
-  text-align: center;
   margin-right:20px;
+  height: 100vh;
+  justify-content: center;
 }
 
 .site-title {
+  position: absolute;
+  top: 39%;
+  left: 32%;
   font-family: 'Exo 2', sans-serif;
   text-shadow: 1px -2px 1px #09061b;
   @include relative-font-size(4);
   font-weight: 200;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: 0px;
-  margin-bottom: -22px; 
-  padding-top:15px;
   color: #E5E5E5;
+  font-size: 6vw;
 }
 .site-title-sm {
+  position: relative;
   font-family: 'Exo 2', sans-serif;
   text-shadow: 1px -2px 1px #09061b;
   @include relative-font-size(2);
   font-weight: 400;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
-  margin-bottom: 5vh;
+  top: 47%;
+  left:58%;
   color: #E5E5E5;
   text-decoration: underline;
+  font-size: 3vw;
 }
 
 
@@ -206,12 +212,11 @@
  * Page content
  */
 .page-content {
-  width: 100%;
-  height: 55vh;
+  font-size: 1.5vw;
+  margin-bottom: 8vh;
   padding: $spacing-unit 0;
   background-color: #E5E5E5;
   box-shadow:inset -5px 4px 20px 0px #999999,  0px -7px 21px 9px #09061b;
-  margin-bottom: 8vh;
   overflow: scroll;
   -webkit-scrollbar { 
     display: none; 
@@ -325,14 +330,17 @@
 }
 .img-icon{
   width: 2%;
+  height: auto;
   border-radius: 50%;
 }
 .img-icon-git{
   width: 8%;
+  height: auto;
   margin-right: -6px;
 }
 .img-icon-mail{
   width:2.5%;
+  height: auto;
 }
 .foot-container{ 
   justify-content: center;
