Updated Main Content view height

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -213,6 +213,7 @@
  */
 .page-content {
   font-size: 1.5vw;
+  height: 70vh;
   margin-bottom: 8vh;
   padding: $spacing-unit 0;
   background-color: #E5E5E5;
