Changed title font

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   </script>
   <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
 
   {% feed_meta %}
   {% if jekyll.environment == 'production' and site.google_analytics %}
