--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -22,9 +22,9 @@
 
 .site-title {
   position: absolute;
-  top: 39%;
+  top: 40%;
   left: 32%;
-  font-family: 'Exo 2', sans-serif;
+  font-family: 'Passion One', cursive;
   text-shadow: 1px -2px 1px #09061b;
   @include relative-font-size(4);
   font-weight: 200;
@@ -35,13 +35,13 @@
 }
 .site-title-sm {
   position: relative;
-  font-family: 'Exo 2', sans-serif;
+  font-family: 'Passion One', cursive;
   text-shadow: 1px -2px 1px #09061b;
   @include relative-font-size(2);
   font-weight: 400;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
-  top: 47%;
+  top: 44%;
   left:58%;
   color: #E5E5E5;
   text-decoration: underline;
