--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,131 +1,130 @@
 ---
 layout: default
 ---
+  <div class="home">
 
-<div class="home">
+        <div class='image-holder-1'>
+            <img class='img-project' src='{{ "/assets/wifi.png" | relative_url }}'> 
+        </div>
 
-      <div class='image-holder-1'>
-          <img class='img-project' src='{{ "/assets/wifi.png" | relative_url }}'>
+        <div class='image-holder-2'>
+          <img class='img-project' src='{{ "/assets/dance.png" | relative_url }}'>
+        </div>
+
+        <div class='image-holder-3'>
+          <img class='img-project' src='{{ "/assets/megaphone.png" | relative_url }}'>
+        </div>
+
+        <div class='image-holder-4'>
+            <img class='img-project' src='{{ "/assets/pacman.png" | relative_url }}'>
+        </div>
+  </div>
+
+<div class='shell-1'>
+  <div class='detail-cont'>
+    <div class='detail-content-1'>
+        <footer-col-wrapper>
+            <div class="footer-col">
+              <div class="footer-col-1-left">
+                  <p class='detail-title'>WiFi Finder</p>
+                  <p class='detail-content'>This is a project created using Angular-4 on the frontend and postgreSQL on the backend.
+                    WiFi Finder allows the user to locate WiFi hotspots around them or in specific areas, based on data pulled from the backend database entered from user.
+                    The project utilizes Angular's observables, as well as data responses following JSON API's formatting conventions.
+                    <br>
+                    Link to github <a href='https://github.com/RyanGKist/WifiApp' target='.blank'>here</a>.
+                  </p>
+              </div>
+              <div class="footer-col-1-right">
+                <ul>
+                  <h3 class='detail-title'>Tech</h3 class='detail-title'>
+                  <li>Angular 4</li>
+                  <li>postgreSQL</li>
+                  <li>SCSS</li>
+                </ul>
+              </div>
+            </div>
+          </footer-col-wrapper>
+    </div>
+</div> 
+
+<div class='shell-2'>
+    <div class='detail-cont'>
+      <div class='detail-content-2'>
+          <footer-col-wrapper>
+              <div class="footer-col">
+                <div class="footer-col-1-left">
+                    <p class='detail-title'>Are we Grooving?</p>
+                    <p class='detail-content'>iOS app made utilizing Core Motion library. The app allows users to generate color schemes based on movement.
+                      Creating an interactive and responsive app. Prioritized tasks into main queue, to allow for real time display of movement.
+                      <br>
+                      Link to github <a href='https://github.com/RyanGKist/AreweGrooving' target='.blank'>here</a>.
+                      <br>
+                      Link to video <a href='https://youtu.be/xtqP7R5KwWM' target='.blank'>here</a>.
+                    </p>
+                </div>
+                <div class="footer-col-1-right">
+                  <ul>
+                    <h3 class='detail-title'>Tech</h3 class='detail-title'>
+                    <li>Swift</li>
+                    <li>Core Motion</li>
+                  </ul>
+                </div>
+              </div>
+            </footer-col-wrapper>
       </div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/xtqP7R5KwWM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </div>
 
-      <div class='image-holder-2'>
-        <img class='img-project' src='{{ "/assets/dance.png" | relative_url }}'>
+<div class='shell-3'>
+    <div class='detail-cont'>
+      <div class='detail-content-3'>
+          <footer-col-wrapper>
+              <div class="footer-col">
+                <div class="footer-col-1-left">
+                    <p class='detail-title'>Political Storm</p>
+                    <p class='detail-content'>Political blog, built using Ruby on Rails & styling done using Spectre SCSS.
+                      <br>
+                      Link to github <a href='https://github.com/RyanGKist/Political-Storm' target='.blank'>here</a>.
+                    </p>
+                </div>
+                <div class="footer-col-1-right">
+                  <ul>
+                    <h3 class='detail-title'>Tech</h3>
+                    <li>Ruby</li>
+                    <li>Rails</li>
+                    <li>Jquery</li>
+                    <li>SCSS</li>
+                  </ul>
+                </div>
+              </div>
+            </footer-col-wrapper>
       </div>
+    </div> 
 
-      <div class='image-holder-3'>
-        <img class='img-project' src='{{ "/assets/megaphone.png" | relative_url }}'>
+<div class='shell-4'>
+    <div class='detail-cont'>
+        <div class='detail-content-4'>
+          <footer-col-wrapper>
+              <div class="footer-col">
+                <div class="footer-col-1-left">
+                    <p class='detail-title'>Pacman</p>
+                    <p class='detail-content'>
+                      This is a simple Pacman game created using only Javascript, CSS and HTML. This was a collaboration with a member of my coding bootcamp.
+                      Utilized HTML DOM manipulation through JavaScript functions & conditionals, to allow Pacman and Ghost to maneuver around the map within
+                      the correct bounds of the map.
+                      <br>
+                      Link to github <a href='https://github.com/laurenhesterman/Pacman' target='.blank'>here</a>.
+                    </p>
+                </div>
+                <div class="footer-col-1-right">
+                  <ul>
+                    <h3 class='detail-title' >Tech</h3>
+                    <li>JavaScript</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                  </ul>
+                </div>
+              </div>
+            </footer-col-wrapper>
       </div>
-
-      <div class='image-holder-4'>
-          <img class='img-project' src='{{ "/assets/pacman.png" | relative_url }}'>
-      </div>
-
-</div>
-<div class='detail-cont'>
-  <div class='detail-content-1 hidden'>
-      <footer-col-wrapper>
-          <div class="footer-col">
-            <div class="footer-col-1-left">
-                <p class='detail-title'>WiFi Finder</p>
-                <p class='detail-content'>This is a project created using Angular-4 on the frontend and postgreSQL on the backend.
-                  WiFi Finder allows the user to locate WiFi hotspots around them or in specific areas, based on data pulled from the backend database entered from user.
-                  The project utilizes Angular's observables, as well as data responses following JSON API's formatting conventions.
-                  <br>
-                  Link to github <a href='https://github.com/RyanGKist/WifiApp' target='.blank'>here</a>.
-                </p>
-            </div>
-            <div class="footer-col-1-right">
-              <ul>
-                <h3 class='detail-title'>Tech</h3 class='detail-title'>
-                <li>Angular 4</li>
-                <li>postgreSQL</li>
-                <li>SCSS</li>
-              </ul>
-            </div>
-          </div>
-        </footer-col-wrapper>
-  </div>
-  <div class='detail-content-2 hidden'>
-      <footer-col-wrapper>
-          <div class="footer-col">
-            <div class="footer-col-1-left">
-                <p class='detail-title'>Are we Grooving?</p>
-                <p class='detail-content'>iOS app made utilizing Core Motion library. The app allows users to generate color schemes based on movement.
-                  Creating an interactive and responsive app. Prioritized tasks into main queue, to allow for real time display of movement.
-                  <br>
-                  Link to github <a href='https://github.com/RyanGKist/AreweGrooving' target='.blank'>here</a>.
-                  <br>
-                  Link to video <a href='https://youtu.be/xtqP7R5KwWM' target='.blank'>here</a>.
-                </p>
-            </div>
-            <div class="footer-col-1-right">
-              <ul>
-                <h3 class='detail-title'>Tech</h3 class='detail-title'>
-                <li>Swift</li>
-                <li>Core Motion</li>
-              </ul>
-            </div>
-          </div>
-        </footer-col-wrapper>
-  </div>
-  <div class='detail-content-3 hidden'>
-      <footer-col-wrapper>
-          <div class="footer-col">
-            <div class="footer-col-1-left">
-                <p class='detail-title'>Political Storm</p>
-                <p class='detail-content'>Political blog, built using Ruby on Rails & styling done using Spectre SCSS.
-                  <br>
-                  Link to github <a href='https://github.com/RyanGKist/Political-Storm' target='.blank'>here</a>.
-                </p>
-            </div>
-            <div class="footer-col-1-right">
-              <ul>
-                <h3 class='detail-title'>Tech</h3>
-                <li>Ruby</li>
-                <li>Rails</li>
-                <li>Jquery</li>
-                <li>SCSS</li>
-              </ul>
-            </div>
-          </div>
-        </footer-col-wrapper>
-  </div>
-  <div class='detail-content-4 hidden'>
-      <footer-col-wrapper>
-          <div class="footer-col">
-            <div class="footer-col-1-left">
-                <p class='detail-title'>Pacman</p>
-                <p class='detail-content'>
-                  This is a simple Pacman game created using only Javascript, CSS and HTML. This was a collaboration with a member of my coding bootcamp.
-                  Utilized HTML DOM manipulation through JavaScript functions & conditionals, to allow Pacman and Ghost to maneuver around the map within
-                  the correct bounds of the map.
-                  <br>
-                  Link to github <a href='https://github.com/laurenhesterman/Pacman' target='.blank'>here</a>.
-                </p>
-            </div>
-            <div class="footer-col-1-right">
-              <ul>
-                <h3 class='detail-title' >Tech</h3>
-                <li>JavaScript</li>
-                <li>HTML</li>
-                <li>CSS</li>
-              </ul>
-            </div>
-          </div>
-        </footer-col-wrapper>
-  </div>
-  <div class='detail-about-me'>
-    <p class='detail-title'>About me</p>
-    <p class='detail-content'>My name is Ryan Kistner and I am a Frontend Web Developer,
-      as well as a Coding Dojo alumni. I have built multiple full stack applications in 
-      Django, MEAN and iOS. 
-      I have fallen in love with writing code iOS and MEAN apps. It's odd mix, but I like what I like :)
-      I am a musician who loves playing live shows and jamming with friends, as well as an avid gamer.
-      I am eager to continue to grow in my career in Web Development. I have worked in the Semi-Conductor industry for 6+ years before 
-      making the decision to start coding. So far it has been a great decisons and I am excited for what my futures holds in Web Development.
-      Please feel free to look at any of my projects listed above, or my github & linkedIn accounts listed below.
-      Also, please feel free to contact me with any questions, opportunties, or concerns.
-      I look forward to talking with you.   
-    </p>
-  </div>
-</div>  
+  </div> 
