--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,6 +45,7 @@ layout: default
             </div>
           </footer-col-wrapper>
     </div>
+    <button class='back'>Back to top</button>
 </div> 
 
 <div class='shell-2'>
@@ -73,6 +74,8 @@ layout: default
             </footer-col-wrapper>
       </div>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/xtqP7R5KwWM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <br>
+      <button class='back'>Back to top</button>
   </div>
 
 <div class='shell-3'>
@@ -99,6 +102,7 @@ layout: default
               </div>
             </footer-col-wrapper>
       </div>
+      <button class='back'>Back to top</button>
     </div> 
 
 <div class='shell-4'>
@@ -127,4 +131,5 @@ layout: default
               </div>
             </footer-col-wrapper>
       </div>
+      <button class='back'>Back to top</button>
   </div> 
